# boomer

./: .clang-format  .clang-tidy  .clangd  .cursorignore  .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  Makefile  PROMPT.md  README.md
.agent/rules/: c23-standards.md  cmake-build.md  code-style.md
.cursor/rules/: c23-standards.mdc  cmake-build.mdc  code-style.mdc
.gemini/: GEMINI.md  settings.json
games/demo/: README.md  config.json
games/demo/maps/: test.json
games/demo/scripts/: main.js  test_ent.js  test_ent.lua
games/demo/src/: palette.gpl
games/demo/src/gfx/: console.xcf
games/demo/src/sprites/: humanoid_template.xcf
games/demo/src/textures/: grid_blue.xcf
games/demo/src/textures/modern/: carpet_0.xcf  inner_wall_0.xcf  inner_wall_1.xcf  road.xcf  wood_0.xcf  wood_1.xcf  wood_2.xcf  wood_3.xcf
src/: main.c  wasm_shell.html
src/core/: config.c  config.h  fs.c  fs.h  lua_sys.c  lua_sys.h  math_utils.h  script_sys.c  script_sys.h  types.h
src/editor/: editor.c  editor.h  undo_sys.c  undo_sys.h
src/game/: entity.c  entity.h
src/render/: renderer.c  renderer.h
src/ui/: console.c  console.h  gui_impl.c
src/video/: texture.c  texture.h  video.c  video.h
src/world/: map_loader.c  map_loader.h  world.c  world.h  world_types.h
